<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/common_bg_color"
     >
    <RelativeLayout
        android:id="@+id/layout_find_topbar"
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/common_topbar_height"
	    android:background="@color/common_topbar_bg_color" >
	
	    <TextView
	        android:id="@+id/tv_find_topbar_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:text="发现"
	        android:textColor="@color/common_topbar_text_font_color"
	        android:textSize="@dimen/common_topbar_text_font_size"
	        android:textStyle="bold" />
	
	    <Button
	        android:id="@+id/btn_find_search"
	        android:layout_width="@dimen/index_topbar_img_query_width"
	        android:layout_height="match_parent"
	        android:layout_centerVertical="true"
	        android:layout_alignParentRight="true"
	        android:background="@drawable/nav_btn_search" />
	
	</RelativeLayout>
    
    <ImageView 
        android:id="@+id/iv_index_find"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/find_banner"
        />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        >
	    <RelativeLayout 
	        android:id="@+id/line_find_maikebei"
	        android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:layout_marginRight="3dp"
	        >
	        <LinearLayout 
	           	android:layout_width="wrap_content"
	           	android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:layout_centerInParent="true"
	            android:layout_marginLeft="28dp"
	            android:layout_marginRight="28dp"
	            >
	            
	            <ImageView 
	                android:layout_width="35dp"
	                android:layout_height="41dp"
	                android:background="@drawable/find_maikebei"
	                android:layout_gravity="center_horizontal"
	                />
	            <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/index_find_maikebei"
	                android:textColor="@color/common_content_dark_gray_text_font_color"
	                android:textSize="16sp"
	                android:layout_marginTop="12dp"
	                />
	            <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/index_find_maikebei_biaoyu"
	                android:textColor="@color/common_content_text_font_color"
	                android:textSize="14sp"
	                android:layout_marginTop="10dp"
	                />
	        </LinearLayout>
        </RelativeLayout>
        <LinearLayout 
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginLeft="3dp"
            android:orientation="vertical"
            >
	        
            <LinearLayout 
                android:id="@+id/line_find_idea"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:orientation="horizontal"
                android:layout_marginBottom="3dp"
                >
	            <LinearLayout 
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    >
	                <ImageView 
		                android:layout_width="31dp"
		                android:layout_height="50dp"
		                android:background="@drawable/find_idea"
		                />
	            </LinearLayout>
                <RelativeLayout 
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="match_parent"
                    >
	                <LinearLayout 
			           	android:layout_width="wrap_content"
			           	android:layout_height="wrap_content"
			            android:orientation="vertical"
			            android:layout_centerVertical="true"
			            android:layout_marginRight="15dp"
			            >
	                    <TextView 
			                android:layout_width="wrap_content"
			                android:layout_height="wrap_content"
			                android:text="@string/index_find_creative"
			                android:textColor="@color/common_content_dark_gray_text_font_color"
			                android:textSize="16sp"
			                android:layout_marginTop="12dp"
			                />
			            <TextView 
			                android:layout_width="wrap_content"
			                android:layout_height="wrap_content"
			                android:text="@string/index_find_creative_biaoyu"
			                android:textColor="@color/common_content_text_font_color"
			                android:textSize="14sp"
			                android:layout_marginTop="10dp"
			                />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
            
            <LinearLayout 
                android:id="@+id/line_find_deploy"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:orientation="horizontal"
                android:layout_marginTop="3dp"
                >
	            <LinearLayout 
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    >
	                <ImageView 
		                android:layout_width="32dp"
		                android:layout_height="36dp"
		                android:background="@drawable/find_release"
		                />
	            </LinearLayout>
                <RelativeLayout 
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="match_parent"
                    >
	                <LinearLayout 
			           	android:layout_width="wrap_content"
			           	android:layout_height="wrap_content"
			            android:orientation="vertical"
			            android:layout_centerVertical="true"
			            android:layout_marginRight="15dp"
			            >
	                    <TextView 
			                android:layout_width="wrap_content"
			                android:layout_height="wrap_content"
			                android:text="@string/index_find_deploy"
			                android:textColor="@color/common_content_dark_gray_text_font_color"
			                android:textSize="16sp"
			                android:layout_marginTop="12dp"
			                />
			            <TextView 
			                android:layout_width="wrap_content"
			                android:layout_height="wrap_content"
			                android:text="@string/index_find_deploy_biaoyu"
			                android:textColor="@color/common_content_text_font_color"
			                android:textSize="14sp"
			                android:layout_marginTop="10dp"
			                />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    
</LinearLayout>
